<resources>
    <string name="app_name">Navigation Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_mail">Mail</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="components">Components</string>
    <string name="calendar">Calendar</string>
    <string name="spinner">SpinnerView</string>
    <string name="selectOption">Select option</string>
    <string name="date">Date</string>
    <string name="selectRange">Select Range</string>
    <string name="dateForMate">DD/MM/YYYY</string>
    <string name="rangeDateForMate">DD/MM/YYYY - DD/MM/YYYY</string>
    <string name="Date">13/12/2023</string>
    <string name="Dates">13/12/2023 – 20/12/2023</string>
</resources>