<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_calendar">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.navigationdrawer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.navigationdrawer.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.navigationdrawer.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/navigation_mail"
        android:name="com.example.navigationdrawer.ui.mail.MailFragment"
        android:label="@string/title_mail"
        tools:layout="@layout/fragment_mail" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.navigationdrawer.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.navigationdrawer.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.navigationdrawer.ui.calendar.CalendarFragment"
        android:label="@string/calendar"
        tools:layout="@layout/fragment_calendar" />
</navigation>