<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calendar.CalendarFragment">

    <TextView
        android:id="@+id/calenderSpinnerMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:textAlignment="textStart"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calenderSpinnerMode" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/date"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/calendar_fill_24px"
        app:helperText="@string/dateForMate"
        style="@style/Widget.App.TextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePicker">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:text="@string/Date"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/rangeCalender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:textAlignment="textStart"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateField" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rangeDateField"
        style="@style/Widget.App.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/selectRange"
        app:endIconDrawable="@drawable/calendar_fill_24px"
        app:endIconMode="custom"
        app:helperText="@string/rangeDateForMate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rangeCalender">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rangeDateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:text="@string/Dates" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>